<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Titulo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="272dp"
        android:layout_height="179dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/portada"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:contentDescription="@string/descripcionPortada"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/portada" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:text="@string/info_tema"
        android:textColor="@android:color/background_light"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etNumero2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/hint_tv2"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etNumero1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etNumero1"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="286dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/hint_tv1"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etNumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/btnResultado"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:maxWidth="320dp"
        android:text="@string/txtBoton"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumero2"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="228dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/txtResultado"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResultado"
        app:layout_constraintVertical_bias="0.09" />

</androidx.constraintlayout.widget.ConstraintLayout>